instances/teak-demo/env/plugins/drydock/k8s/debug/deployments.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms-debug
  labels:
    app.kubernetes.io/name: cms-debug
  annotations:
    argocd.argoproj.io/sync-wave: "50"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: cms-debug
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cms-debug
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      containers:
        - name: cms-debug
          args: [./manage.py cms runserver 0.0.0.0:8000]
          command: ["/bin/bash", "-c"]
          image: 466538543953.dkr.ecr.eu-central-1.amazonaws.com/phd-experiment-6888bd00add5eb8ac6bb3199:v20.0.0-20250805-pfxsgwaj
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /openedx/edx-platform/lms/envs/tutor/
              name: settings-lms
            - mountPath: /openedx/edx-platform/cms/envs/tutor/
              name: settings-cms
            - mountPath: /openedx/config
              name: config
          securityContext:
            allowPrivilegeEscalation: false
          stdin: true
          tty: true
      volumes:
        - name: settings-lms
          configMap:
            name: openedx-settings-lms
        - name: settings-cms
          configMap:
            name: openedx-settings-cms
        - name: config
          configMap:
            name: openedx-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lms-debug
  labels:
    app.kubernetes.io/name: lms-debug
  annotations:
    argocd.argoproj.io/sync-wave: "50"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: lms-debug
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lms-debug
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      containers:
        - name: lms-debug
          args: [./manage.py lms runserver 0.0.0.0:8000]
          command: ["/bin/bash", "-c"]
          image: 466538543953.dkr.ecr.eu-central-1.amazonaws.com/phd-experiment-6888bd00add5eb8ac6bb3199:v20.0.0-20250805-pfxsgwaj
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /openedx/edx-platform/lms/envs/tutor/
              name: settings-lms
            - mountPath: /openedx/edx-platform/cms/envs/tutor/
              name: settings-cms
            - mountPath: /openedx/config
              name: config
          securityContext:
            allowPrivilegeEscalation: false
          stdin: true
          tty: true
      volumes:
        - name: settings-lms
          configMap:
            name: openedx-settings-lms
        - name: settings-cms
          configMap:
            name: openedx-settings-cms
        - name: config
          configMap:
            name: openedx-config
